--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -4,12 +4,14 @@
 <head>
   <title>Business</title>
   <meta name="format-detection" content="telephone=no">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <meta name="viewport"
+    content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/css.css?family=Montserrat:400,700%7CLato:300,300italic,400,400italic,700,900%7CPlayfair+Display:700italic,900">
+  <link rel="stylesheet" type="text/css"
+    href="css/css.css?family=Montserrat:400,700%7CLato:300,300italic,400,400italic,700,900%7CPlayfair+Display:700italic,900">
+
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -29,23 +31,31 @@
                   <ul class="rd-navbar-aside-group list-units">
                     <li>
                       <div class="unit unit-horizontal unit-spacing-xs unit-middle">
-                        <div class="unit-left"><span class="icon icon-xxs icon-primary material-icons-phone"></span></div>
-                        <div class="unit-body"><a href="callto:+2348068443480" class="link-secondary">+234-8068443480</a></div>
+                        <div class="unit-left"><span class="icon icon-xxs icon-primary material-icons-phone"></span>
+                        </div>
+                        <div class="unit-body"><a href="callto:+2348068443480"
+                            class="link-secondary">+234-8068443480</a></div>
                       </div>
                     </li>
                     <li>
                       <div class="unit unit-horizontal unit-spacing-xs unit-middle">
                         <div class="unit-left"><span class="icon icon-xxs icon-primary fa-envelope-o"></span></div>
                         <div class="unit-body"><a href="/cdn-cgi/l/email-protection#ab88" class="link-secondary"><span
-                              class="__cf_email__" data-cfemail="81e8efe7eec1e5e4eceeede8efeaafeef3e6">Dave_Cruz_Online@gmail.com</span></a></div>
+                              class="__cf_email__"
+                              data-cfemail="81e8efe7eec1e5e4eceeede8efeaafeef3e6">Dave_Cruz_Online@gmail.com</span></a>
+                        </div>
                       </div>
                     </li>
                   </ul>
                   <div class="rd-navbar-aside-group">
                     <ul class="list-inline list-inline-reset">
-                      <li><a href="#" class="icon icon-circle icon-silver-chalice-filled icon-xxs-smallest fa fa-facebook"></a></li>
-                      <li><a href="#" class="icon icon-circle icon-silver-chalice-filled icon-xxs-smallest fa fa-twitter"></a></li>
-                      <li><a href="#" class="icon icon-circle icon-silver-chalice-filled icon-xxs-smallest fa fa-google-plus"></a></li>
+                      <li><a href="#"
+                          class="icon icon-circle icon-silver-chalice-filled icon-xxs-smallest fa fa-facebook"></a></li>
+                      <li><a href="#"
+                          class="icon icon-circle icon-silver-chalice-filled icon-xxs-smallest fa fa-twitter"></a></li>
+                      <li><a href="#"
+                          class="icon icon-circle icon-silver-chalice-filled icon-xxs-smallest fa fa-google-plus"></a>
+                      </li>
                     </ul>
                   </div>
                 </div>
@@ -62,13 +72,15 @@
                   </div>
                   <div id="rd-search-results-live" class="rd-search-results-live"></div>
                 </form>
-                <button data-rd-navbar-toggle=".rd-navbar-search, .rd-navbar-search-wrap" class="rd-navbar-search-toggle"></button>
+                <button data-rd-navbar-toggle=".rd-navbar-search, .rd-navbar-search-wrap"
+                  class="rd-navbar-search-toggle"></button>
               </div>
             </div>
             <div class="rd-navbar-group">
               <div class="rd-navbar-panel">
                 <button data-rd-navbar-toggle=".rd-navbar-nav-wrap" class="rd-navbar-toggle"><span></span></button>
-                <a href="/" class="rd-navbar-brand brand"><img src="/img/logo-black.png" width="200" height="22" alt="Dave_Cruz logo" /></a>
+                <a href="/" class="rd-navbar-brand brand"><img src="/img/logo-black.png" width="200" height="22"
+                    alt="Dave_Cruz logo" /></a>
               </div>
               <div class="rd-navbar-nav-wrap">
                 <div class="rd-navbar-nav-inner">
@@ -106,7 +118,7 @@
             <div class="range">
               <div class="cell-sm-6 cell-md-4">
                 <div class="inset-md-right-30">
-                  <h6 class="text-uppercase">About us</h6>
+                  <h6 class="text-uppercase">About Us</h6>
                   <p class="offset-top-22"> Dave_Cruz Nig. Limited is an A-size depot of Leather and enterpreneurship
                     templates - more than 46,000 designs to choose from. </p>
                 </div>
@@ -115,16 +127,22 @@
                     <div>
                       <div class="unit unit-horizontal unit-spacing-xs">
                         <div class="unit-left"><span class="icon icon-xs-smaller icon-primary fa-phone"></span></div>
-                        <div class="unit-body"><a href="callto:+2348068443480" class="link link-bold link-white-v2">+234-8068443480</a></div>
+                        <div class="unit-body"><a href="callto:+2348068443480"
+                            class="link link-bold link-white-v2">+234-8068443480</a></div>
                       </div>
-                      <div class="inset-left-30"><a href="/cdn-cgi/l/email-protection#f0d3" class="link-white-v2 text-italic"><span
-                            class="__cf_email__" data-cfemail="2d44434b426d494840424144434603425f4a">Dave_Cruz_Online@gmail.com</span></a></div>
+                      <div class="inset-left-30"><a href="/cdn-cgi/l/email-protection#f0d3"
+                          class="link-white-v2 text-italic"><span class="__cf_email__"
+                            data-cfemail="2d44434b426d494840424144434603425f4a">Dave_Cruz_Online@gmail.com</span></a>
+                      </div>
                     </div>
                     <div>
                       <ul class="list-inline list-inline-reset">
-                        <li><a href="#" class="icon icon-round icon-gray-dark-filled icon-xxs-smallest fa fa-facebook"></a></li>
-                        <li><a href="#" class="icon icon-round icon-gray-dark-filled icon-xxs-smallest fa fa-twitter"></a></li>
-                        <li><a href="#" class="icon icon-round icon-gray-dark-filled icon-xxs-smallest fa fa-google-plus"></a></li>
+                        <li><a href="#"
+                            class="icon icon-round icon-gray-dark-filled icon-xxs-smallest fa fa-facebook"></a></li>
+                        <li><a href="#"
+                            class="icon icon-round icon-gray-dark-filled icon-xxs-smallest fa fa-twitter"></a></li>
+                        <li><a href="#"
+                            class="icon icon-round icon-gray-dark-filled icon-xxs-smallest fa fa-google-plus"></a></li>
                       </ul>
                     </div>
                   </div>
@@ -153,13 +171,15 @@
                 <h6 class="text-uppercase">Subscribe</h6>
                 <div class="offset-top-22 offset-md-top-30">
                   <p>Get latest updates and offers.</p>
-                  <form data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php"
-                    class="rd-mailform form-classic form-inline offset-top-15">
+                  <form data-form-output="form-output-global" data-form-type="subscribe" method="post"
+                    action="bat/rd-mailform.php" class="rd-mailform form-classic form-inline offset-top-15">
                     <div class="form-group">
-                      <input id="contact-email" type="email" name="email" data-constraints="@Email @Required" class="form-control">
+                      <input id="contact-email" type="email" name="email" data-constraints="@Email @Required"
+                        class="form-control">
                       <label for="contact-email" class="form-label">Enter Your E-mail</label>
                     </div>
-                    <button type="submit" aria-label="Subscribe" class="btn btn-icon-only btn-primary"><span class="icon icon-xs icon-white fa-envelope-o"></span></button>
+                    <button type="submit" aria-label="Subscribe" class="btn btn-icon-only btn-primary"><span
+                        class="icon icon-xs icon-white fa-envelope-o"></span></button>
                   </form>
                 </div>
               </div>
@@ -214,8 +234,11 @@
       </div>
     </div>
   </div>
-  <script src="/js/bootstrap.min.js"></script>
   <script src="/js/jquery.min.js"></script>
+  <script src="/js/popper.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/jquery.easing.1.3.js"></script>
+  <script src="/js/owl.carousel.min.js"></script>
   <script src="/js/core.min.js"></script>
   <script src="/js/script.js"></script>
 </body>
